third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/unused_lambda_inference_ok.exp
module 0x8675309::M {
    public fun f() {
        |arg0| __lambda__1__f(arg0);
    }
    fun __lambda__1__f(i: u64): u64 {
        i + 1
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid name
  ┌─ unused_lambda_inference_ok.move:5:9
  │
5 │     fun __lambda__1__f(i: u64): u64 {
  │         ^^^^^^^^^^^^^^ Invalid function name '__lambda__1__f'. Function names cannot start with '_'
